# proof-of-hack

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
.project/: PRD-proof-of-hack.md
app/: next.config.mjs  package-lock.json  package.json
app/public/: skill.json  skill.md
app/scripts/: build-ipfs.mjs
app/src/: middleware.ts
app/src/app/: layout.tsx  page.tsx
app/src/app/api/disclosures/: route.ts
app/src/app/api/killswitch/: route.ts
app/src/app/api/protocols/: route.ts
app/src/app/api/protocols/[programId]/status/: route.ts
app/src/app/api/register/: route.ts
app/src/app/api/vaults/: route.ts
app/src/app/bounty/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/hackathon/: page.tsx
app/src/app/register/: page.tsx
app/src/app/submit/: page.tsx
app/src/components/: Navbar.tsx  WalletProvider.tsx
app/src/lib/: constants.ts  idl.json  program.ts
mcp/: README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: idl.json  index.ts
programs/proof_of_hack/: Cargo.toml
programs/proof_of_hack/src/: errors.rs  lib.rs  state.rs
programs/proof_of_hack/src/instructions/: accept_authority.rs  acknowledge_disclosure.rs  claim_disclosure.rs  create_protocol_config.rs  mod.rs  register_protocol.rs  resolve_disclosure.rs  reveal_proof.rs  submit_disclosure.rs  update_encryption_key.rs  update_protocol_config.rs
scripts/: set-protocol-config.ts
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  crypto.ts  index.ts  pda.ts  types.ts
tests/: proof-of-hack.ts
