[package]
name = "proof-of-hack"
version = "0.1.0"
description = "Verifiable white hat disclosure registry on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_hack"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1" }
sha2 = "0.10"
